Fixed header alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,10 +31,10 @@
     @apply font-bold tracking-tight;
   }
   header {
-    @apply bg-white border-b border-gray-200 p-4 sticky top-0 z-50;
+    @apply sm:px-0 md:px-0 bg-white border-b border-gray-200 p-4 sticky top-0 z-50;
   }
   nav {
-    @apply container flex justify-between;
+    @apply sm:px-0 md:px-0 container flex justify-between;
   }
   h1 {
     @apply snap-center font-serif text-5xl py-10 text-center text-sky-900;
